<resources>
    <!-- 테스트 -->
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- Share Note -->
    <string name="app_name">ShareNote</string>
    <string name="kakao_app_key">dd23c2750d6bd625c03699d26f999737</string>
    <string name="naver_client_key">edYI0EafRxuJFk0NcOnf</string>
    <string name="naver_secret_key">x4Ic9e0Hv0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">홈</string>
    <string name="title_analysis">기업분석</string>
    <string name="title_tradingNotes">매매일지</string>
    <string name="title_shareKeep">쉐어킵</string>

    <string name="day_of_trading">17일</string>

    <string name="trading_note_title1">기아차 10퍼센트 달성하자</string>
    <string name="trading_note_test1_tag1">#존버</string>
    <string name="trading_note_test1_tag2">#한주당</string>

    <string name="trading_note_title2">[거래완료] 개미주식 122조원 돌파한 날 !! 와 대박스~~~~~ㅋㅋㅋㅋㅋㅋ</string>
    <string name="trading_note_test2_tag1">#존버</string>
    <string name="trading_note_test2_tag2">#한주당</string>
    <string name="trading_note_test2_tag3">#5개씩</string>
    <string name="trading_note_test2_tag4">#보여지고</string>

    <string name="trading_note_title3">기아차 10퍼센트 달성하자22222</string>
    <string name="trading_note_test3_tag1">#존버</string>
    <string name="trading_note_test3_tag2">#한주당</string>
    <string name="title_tradingNote">매매일지 작성</string>
    <string name="post_trading_note_title">제목</string>
    <string name="post_trading_note_title_hint">제목을 입력해주세요</string>
    <string name="post_trading_note_tags">태그</string>
    <string name="post_trading_note_tags_hint">태그를 입력해주세요.(최대 10개)</string>
    <string name="post_trading_note_date">날짜</string>
    <string name="post_trading_note_day_hint">2021년 02월 18일 오후 7:43</string>

    <string name="post_trading_note_stocks_title">거래주식</string>
    <string name="post_trading_note_stock_name">주식명</string>
    <string name="post_trading_note_stock_name_hint">종목/코드명 검색</string>
    <string name="post_trading_note_stock_name_ex">기아차</string>

    <string name="post_trading_note_stock_type">분류</string>
    <string name="post_trading_note_stock_type_ex">매수</string>
    <string name="post_trading_note_stock_type_buy">매수</string>
    <string name="post_trading_note_stock_type_sell">매도</string>
    <string name="post_trading_note_stock_type_allocation">배당</string>
    <string name="post_trading_note_stock_type_none">미거래</string>

    <string name="post_trading_note_stock_type_buy_price">매수가</string>
    <string name="post_trading_note_stock_type_valuation">평가금액</string>
    <string name="post_trading_note_stock_type_dividend_price">배당주가</string>
    <string name="post_trading_note_stock_type_now_price">현재가</string>
    <string name="post_trading_note_stock_type_week_dividend">주당배당금</string>
    <string name="post_trading_note_stock_type_allocation_profit">배당 수익</string>

    <string name="won">원</string>
    <string name="ju">주</string>


    <string name="post_trading_note_time">거래시간</string>
    <string name="post_trading_note_time_hint">2021년 02월 18일 오후 7:43</string>

    <string name="save">저장</string>
    <string name="remove_stock_note">삭제</string>
    <string name="edit_stock_note">수정하기</string>

    <string name="post_trading_note_news_title">관련뉴스</string>
    <string name="show_news">기사 본문 보기</string>
    <string name="post_trading_note_memo">메모</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">취소</string>

</resources>
