<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    app:behavior_peekHeight="700dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_trading_note_stocks_title"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/black_1"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_baseline_close_24"
            android:layout_marginRight="@dimen/fab_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_sheet_title"
            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_stock_title"
                    android:layout_width="@dimen/tv_post_trading_note_width"
                    android:layout_height="0dp"
                    android:text="@string/post_trading_note_stock_name"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_stock_title"
                    app:layout_constraintBottom_toBottomOf="@id/et_stock_title"/>

                <EditText
                    android:id="@+id/et_stock_title"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:hint="@string/post_trading_note_stock_name_hint"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_stock_title"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_stock_type"
                    android:layout_width="@dimen/tv_post_trading_note_width"
                    android:layout_height="0dp"
                    android:text="@string/post_trading_note_stock_type"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ll_stock_types"
                    app:layout_constraintBottom_toBottomOf="@id/ll_stock_types"/>

                <LinearLayout
                    android:id="@+id/ll_stock_types"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_stock_type"
                    app:layout_constraintRight_toRightOf="parent">

                    <Button
                        android:layout_width="52dp"
                        android:layout_height="42dp"
                        android:text="@string/post_trading_note_stock_type_buy"/>

                    <Button
                        android:layout_width="52dp"
                        android:layout_height="42dp"
                        android:text="@string/post_trading_note_stock_type_sell"/>

                    <Button
                        android:layout_width="52dp"
                        android:layout_height="42dp"
                        android:text="@string/post_trading_note_stock_type_allocation"/>

                    <Button
                        android:layout_width="72dp"
                        android:layout_height="42dp"
                        android:text="@string/post_trading_note_stock_type_none"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_post_trading_note_date"
                    android:layout_width="@dimen/tv_post_trading_note_width"
                    android:layout_height="0dp"
                    android:text="@string/post_trading_note_time"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_post_trading_note_date"
                    app:layout_constraintBottom_toBottomOf="@id/btn_post_trading_note_date"/>

                <Button
                    android:id="@+id/btn_post_trading_note_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"
                    android:hint="@string/post_trading_note_time_hint"
                    android:gravity="left|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_post_trading_note_date"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_post_trading_note_buy_price"
                    android:layout_width="@dimen/tv_post_trading_note_width"
                    android:layout_height="0dp"
                    android:text="@string/post_trading_note_stock_type_buy_price"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_post_trading_note_buy_price"
                    app:layout_constraintBottom_toBottomOf="@id/et_post_trading_note_buy_price"/>

                <EditText
                    android:id="@+id/et_post_trading_note_buy_price"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"
                    android:hint="@string/won"
                    android:gravity="left|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_post_trading_note_buy_price"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/maincolor"
            android:text="@string/save"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginHorizontal="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>